# tamaki

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
src/: CMakeLists.txt  a.cc  binary_index_tree.cc  divisor.cc  floyd_warshall.cc  mod.cc  palindrome.cc  prime.cc
tests/: CMakeLists.txt  test_a.cc
